connecting ktor project to the posgtresql database; making desktop first version and testing most basic logic

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,15 @@
 #Kotlin
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
+
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
 org.gradle.caching=true
+
+# Use Java 17 for Gradle (Kotlin 2.3 doesn't support Java 25 yet)
+org.gradle.java.home=C:/Program Files/Java/jdk-17
+
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
